# hash-poc

./: README.md  bench.html  hash-poc.cabal
src/: Hash.hs  Main.hs
